# accident-analysis-hackathon

./: .gitignore  LICENSE  PLAN.md  advanced_tracker.py  main.py  overlay.py  pyproject.toml  track.py
src/: detect.config.json  detect.py  validate_video.py
src/bad_track/: bytetrack.yaml  consolidate_tracks.py  fix_track_ids.py  improved_consolidate_tracks.py
